--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "popper.js": "^1.14.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "undici": "^6.18.2",
+    "vite": "^5.2.12",
+    "webpack-dev-middleware": "^7.2.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
